# SKATRAK-Playground

./: .gitignore  README.md  main.cpp
doc/: Doxyfile
include/: SKATRAK_PLAYGROUND.hpp  font.hpp  image.hpp  inifile.hpp  menu.hpp  messagebox.hpp  music.hpp  sfx.hpp  shared_attributes.hpp  str_operations.hpp  system.hpp  timekeeper.hpp  timer.hpp
include/conecta4/: tablero.hpp
include/snake/: snake.hpp  snakeMap.hpp  snakePiece.hpp
lib/linux/: libSDL_mixer.la
lib/linux/x64/: libSDL_mixer-1.2.so.0.12.0
project/: CMakeLists.txt  Makefile  SKATRAK Playground.dev  SKATRAK Playground.vcxproj  script compilador windows.bat
proyect/: Makefile  SKATRAK Playground.dev  script compilador windows.bat
resources/fonts/: Alte Haas Grotesk Licence.txt
resources/maps/: castle.txt  cave.txt  mapasnake_prueba.txt  puzzle.txt  smile.txt  volcano.txt  wave.txt
resources/settings/: conecta4_setlist.ini  menu_setlist.ini  prueba.ini  snake_maplist.ini  snake_setlist.ini
src/: font.cpp  image.cpp  inifile.cpp  main.cpp  mainMenu.cpp  menu.cpp  messagebox.cpp  music.cpp  sfx.cpp  shared_attributes.cpp  str_operations.cpp  system.cpp  timekeeper.cpp  timer.cpp
src/conecta4/: Game_Conecta4.cpp  gameConecta4.cpp  mainConecta4.cpp  messagesConecta4.cpp  tablero.cpp
src/snake/: gameSnake.cpp  mainSnake.cpp  snake.cpp  snakeMap.cpp  snakePiece.cpp
